CREATE TABLE barbershops (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR(255) NOT NULL
);

CREATE TABLE branches (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR(255) NOT NULL,
    address VARCHAR(255),
    barbershop_id BIGINT NOT NULL
);

CREATE TABLE users (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    email VARCHAR(255),
    password VARCHAR(255),
    role VARCHAR(255),
    display_name VARCHAR(255),
    temporary_password BOOLEAN,
    barbershop_id BIGINT
);

CREATE TABLE user_branches (
    user_id BIGINT NOT NULL,
    branch_id BIGINT NOT NULL,
    PRIMARY KEY (user_id, branch_id)
);

CREATE TABLE clients (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    email VARCHAR(255),
    phone_number VARCHAR(255),
    first_name VARCHAR(255),
    last_name VARCHAR(255),
    document_number VARCHAR(255),
    notes VARCHAR(1000),
    owner_id BIGINT,
    barbershop_id BIGINT
);

CREATE TABLE shifts (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    datetime TIMESTAMP,
    client_id BIGINT,
    status VARCHAR(255),
    estimated_amount NUMERIC(10, 2),
    owner_id BIGINT,
    branch_id BIGINT
);

CREATE TABLE visits (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    shift_id BIGINT NOT NULL UNIQUE,
    attended_by_user_id BIGINT,
    total_amount NUMERIC(10, 2) NOT NULL,
    currency VARCHAR(3),
    payment_status VARCHAR(255) NOT NULL,
    paid_at TIMESTAMP,
    payment_method VARCHAR(255)
);

CREATE TABLE app_settings (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    default_estimated_amount NUMERIC(10, 2),
    default_schedule_slots VARCHAR(1000),
    owner_id BIGINT,
    branch_id BIGINT
);

CREATE TABLE schedule_overrides (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    date DATE NOT NULL,
    slots VARCHAR(1000) NOT NULL,
    owner_id BIGINT,
    branch_id BIGINT
);

CREATE INDEX idx_branches_barbershop_id ON branches (barbershop_id);
CREATE INDEX idx_users_barbershop_id ON users (barbershop_id);
CREATE INDEX idx_clients_barbershop_id ON clients (barbershop_id);
CREATE INDEX idx_clients_phone_barbershop ON clients (phone_number, barbershop_id);
CREATE INDEX idx_shifts_branch_datetime ON shifts (branch_id, datetime);
CREATE INDEX idx_shifts_client_id ON shifts (client_id);
CREATE INDEX idx_visits_attended_by_user_id ON visits (attended_by_user_id);
CREATE INDEX idx_app_settings_branch_id ON app_settings (branch_id);
CREATE INDEX idx_schedule_overrides_branch_date ON schedule_overrides (branch_id, date);
