classDiagram
direction LR

class Client {
Long id
String email
String firstName
String lastName
String documentNumber
}

class Shift {
Long id
LocalDateTime datetime
ShiftStatus status
BigDecimal estimatedAmount
}

class Visit {
Long id
BigDecimal totalAmount
String currency
PaymentStatus paymentSatus
LocalDateTime paidAt
PaymentMethod paymentMethod
}

class ShiftStatus {
<<enumeration>>
PENDING
COMPLETED
CANCELLED
}

class PaymentStatus {
<<enumeration>>
PENDING
PAID
PARTIAL
REFUNDED
}

class PaymentMethod {
<<enumeration>>
CASH
TRANSFER
CARD
}

Client "1" --> "0..*" Shift : books
Shift "1" --> "1" Client : client
Shift "1" --> "0..1" Visit : generates
Visit "1" --> "1" Shift : shift

Shift --> ShiftStatus
Visit --> PaymentStatus
Visit --> PaymentMethod